UI++ rm some redundant titles, buttons++

--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -46,7 +46,7 @@ div(ng-cloak, ng-controller="basketsController")
    .col-md-6
 
     .btn-group
-     button.btn.btn-info.dropdown-toggle(type="button", data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false") {% trans "Action" %}
+     button.btn.btn-info.dropdown-toggle(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") {% trans "Action" %}
        span.caret
 
      ul.dropdown-menu
