UI search results - toggle covers, buttons, new price column

--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -113,7 +113,7 @@ div(ng-cloak, ng-controller="basketsController")
      tbody
        tr
          td(ng-show="show_images")
-            .col-md-6(ng-show="show_images")
+            .col-md-6
 
          td {% trans "Total" %}
          td
