--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -129,7 +129,10 @@ div(ng-cloak, ng-controller="basketsController")
          td(ng-show="show_images")
             .col-md-6(ng-show="show_images")
               img.myImg(ng-show="it.img", src="{{ 'it.img' | ng }}")
-         td: a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
+         td
+           a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
+           div(ng-show="show_images") {{'it.publishers[0].fields.name'|ng}}
+
          td {{ 'it.quantity' | ng}}
          td {{ 'it.price' | ng }} €
          td
