Transform a list to a deposit

--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -61,7 +61,7 @@ div(ng-cloak, ng-controller="basketsController")
        li: a(href="#", ng-click="command()", title='{% trans "Mark all the cards to command" %}') {% trans "Command…" %}
        li: a(href="#", ng-click="receive_command()", title='{% trans "Receive a command and check you received all the books" %}') {% trans "Receive a command" %}…
        li.divider(role="separator")
-       li: a(href="#", ng-click="as_deposit()", title='{% trans "You can transform this list of books to a deposit. You will be asked the distributor and the discount." %}') {% trans "Transform as deposit" %}…
+       li: a(href="#", ng-click="open_to_deposit('md')", title='{% trans "You can transform this list of books to a deposit. You will be asked the distributor and the discount." %}') {% trans "Transform as deposit" %}…
 
     .btn-group
      button.btn.btn-success.dropdown-toggle(data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false", title="{% trans 'Export the list to the required format' %}") {% trans "Export" %}
@@ -73,10 +73,10 @@ div(ng-cloak, ng-controller="basketsController")
        li: a(href="#", ng-click="export_csv('pdf')") pdf - {% trans "with barcodes" %}
 
     .btn-group
-       button.btn.btn-default(ng-click="toggle_images()", title='{% trans "Hide and show covers" %}')
+       button.btn.btn-default(ng-click="toggle_images()", title='{% trans "Hide and show covers (d)" %}')
          i.glyphicon.glyphicon-th-list
 
-       button.btn.btn-default(type="button", ng-click="showing_notes = ! showing_notes", title='{% trans "Show your notes" %}')
+       button.btn.btn-default(type="button", ng-click="showing_notes = ! showing_notes", title='{% trans "Show your notes (n)" %}')
          i.glyphicon.glyphicon-pencil
 
        a(href="http://abelujo.cc/docs/lists/", target="_blank"): button.btn.btn-default(href="http://abelujo.cc/docs/inventories/", title='{% trans "Read the documentation" %}')
@@ -156,4 +156,25 @@ div(ng-cloak, ng-controller="basketsController")
 
       button.btn.btn-primary(ng-click="ok()") {% trans "OK" %}
 
+ script(type="text/ng-template", id="basketToDepositModal.html")
+    div.modal-header
+      h3.modal-title {% trans "Transform to a deposit" %}
+
+    div.modal-body
+      label {% trans "Name" %}
+      input#default-input(type="text", ng-model="new_name")
+      div
+        label {% trans "Distributor" %}
+        ui-select(ng-model="distributor.selected")
+          ui-select-match
+            span(ng-bind="$select.selected.repr")
+          ui-select-choices(
+            repeat="it in (distributor_list | filter:$select.search) track by it.id"
+            refresh="refreshDistributors($select.search, $select)"
+            refresh-delay="100")
+              span(ng-bind="it.name")
+
+        div: a(target="_blank", href="/admin/search/distributor/add"){% trans "Add a distributor" %}
+
+      button.btn.btn-primary(ng-click="ok()") {% trans "OK" %}
 {% endblock content %}
