--- a/templates/search/dashboard.jade
+++ b/templates/search/dashboard.jade
@@ -50,6 +50,34 @@ div(ng-controller="dashboardController", ng-cloak="stats")
               div(st-pagination="", st-items-by-page="10")
 
   .row
+   .col-lg-6
+    h3 {% trans "Age of the last sell" %}
+    em {% trans "Click the graph to show the corresponding cards." %}
+
+    div
+      label.col-sm-4 {% trans "Shelf" %}
+      div.col-md-8
+        select.form-control(
+          ng-model="shelf"
+          ng-change="age_shelf()"
+          ng-options="elt.fields.name for elt in shelfs")
+
+    div#chart-age
+
+   .col-lg-6
+     table.table.table-striped(st-table="ng", ng-show="stock_age_cards.length > 0")
+        thead
+          tr
+            th {% trans "Title" %}
+        tbody
+          tr(ng-repeat="card in stock_age_cards")
+            th {{ 'card.title' | ng }}
+        tfoot
+          tr
+            td.text-center(colspan="5")
+              div(st-pagination="", st-items-by-page="10")
+
+  .row
     .col-lg-6
       h3 {% trans "Cards never sold" %}: {{ 'static_stock.never_sold_nb'|ng }}
       div: em {% trans "Excerpt of the list" %}:
