--- a/templates/search/inventory_view.jade
+++ b/templates/search/inventory_view.jade
@@ -42,7 +42,7 @@ div(ng-controller="inventoryNewController")
             span.sr-only {{ 'progress_current ' | ng }}
 
        .col-md-3
-         btn.btn.btn-danger(ng-click="terminate()") {% trans "Terminate…" %}
+         btn.btn.btn-success(ng-click="terminate()") {% trans "Analyse…" %}
 
     .row
      .col-lg-9
