Sell: choose a discount for each book

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -38,7 +38,7 @@ html(ng-app="abelujo")
           li
             a Abelujo
           li.push-right(href="#")
-            a(href='{% url "stats" %}') {% trans "Statistiques" %}
+            a(href='{% url "stats" %}') {% trans "Statistics" %}
               i.glyphicon.glyphicon-stats
 
           li.dropdown.push-right
