--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -91,32 +91,40 @@ div.ng-cloak(ng-controller="sellController")
                 i.glyphicon.glyphicon-refresh
 
       h3(ng-show="cards_selected.length")
-        {{ 'getTotalCopies() ' | ng }} {% trans "titles selected. Total:" %} {{ 'total_price ' | ng }}
-      div(ng-show="cards_selected", ng-repeat="card in cards_selected")
-        h4
+        {{ 'getTotalCopies() ' | ng }} {% trans "titles selected. Total:" %} {{ 'total_price ' | ng }} €
+
+      .row(ng-show="cards_selected", ng-repeat="card in cards_selected")
+        h4.col-md-6
           a(target="_blank", href="{{ 'card.get_absolute_url' | ng }}") {{ 'card.title' | ng }}
+
+        //- .col-md-3
           span(ng-repeat="auth in card.authors")
             span {{ 'auth.fields.name' | ng }}
           i.glyphicon.glyphicon-warning-sign(
             ng-show="{% verbatim %} cards_selected[$index].ambiguous_sell {% endverbatim %}"
             title="{% trans 'There is a conflict with deposits.' %}")
-          i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
-          i.glyphicon.glyphicon-exclamation-s
-        span
+          //- i.glyphicon.glyphicon-exclamation-s
 
-        .row
-          .col-md-3
+        .col-md-2
             p.input-group
-                label.sr-only Prix
+                label.sr-only {% trans "Price" %}
                 input.form-control(
                   type="number", step="0.1", min=0
-                  value="{{ 'card.price_sold' | ng }}"
+                  value="{{card.price_sold}}"
                   ng-model="{% verbatim %} cards_selected[$index].price_sold {% endverbatim %}"
                   ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
                 )
                 span.input-group-addon €
 
-          .col-md-3
+        .col-md-1
+            select(
+              ng-options="elt.name for elt in discounts.choices"
+              title='{% trans "Choose a discount" %}'
+              ng-model="cards_selected[$index].quick_discount"
+              ng-change='discount_apply($index)'
+              )
+
+        .col-md-2
             p.input-group
                 label.sr-only {% trans "Quantity" %}
                 span.input-group-addon X
@@ -125,6 +133,9 @@ div.ng-cloak(ng-controller="sellController")
                   ng-model="{% verbatim %} cards_selected[$index].quantity {% endverbatim %}"
                   ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
                 )
+
+        .col-md-1
+            i.glyphicon.glyphicon-remove.mouse-pointer(ng-click="remove_from_selection($index)", style="float: right;")
 
 
       input.btn.btn-primary(id="validateButton", type="submit", value="{% trans 'Validate' %}", ng-click="sellCards()")
